plugins/kotlin/idea/tests/testData/multiplatform/incompleteActualization/common/common.kt
package foo

expect class <!LINE_MARKER("descr='Has actuals in js module'"), NO_ACTUAL_FOR_EXPECT!>ExpectInCommonActualInJsOnly<!>
expect class <!LINE_MARKER("descr='Has actuals in jvm module'"), NO_ACTUAL_FOR_EXPECT!>ExpectInCommonActualInJvmOnly<!>
